<resources>
    <string name="app_name">Profiler</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_msg">Welcome to Profiler</string>
    <string name="about_me">About Me</string>
    <string name="interests">Interests</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="error_photo_url_request">Unable to load profile photo</string>
    <string name="msg_confirmation_logout">Are you sure you want to logout?</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="confirmation_password">Confirmation password</string>
    <string name="about_me_hint">Tell a bit about yourself</string>
    <string name="interests_hint">What are your favorites things to do?</string>
    <string name="confirm_menu_action">Confirm action</string>
    <string name="about_me_hint_enter_text">Tell us about yourself (Max 1500 characters)</string>
    <string name="interests_hint_enter_text">Tell us about your interests (Max 3000 characters)</string>
    <string name="please_wait">Please wait</string>
</resources>
