<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <!-- NAME -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_txt_name"
                    style="@style/InputCredentials.Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    tools:text="Name" />
            </android.support.design.widget.TextInputLayout>

            <!-- EMAIL -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_txt_email"
                    style="@style/InputCredentials.Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    tools:text="email@example.com" />
            </android.support.design.widget.TextInputLayout>

            <!-- PASSWORD -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_txt_password"
                    style="@style/InputCredentials.Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    tools:text="Password" />
            </android.support.design.widget.TextInputLayout>

            <!-- CONFIRMATION PASSWORD -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutConfirmationPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_txt_confirmation_password"
                    style="@style/InputCredentials.Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmation_password"
                    tools:text="Password" />
            </android.support.design.widget.TextInputLayout>

            <!-- CREATE ACCOUNT -->
            <Button
                android:id="@+id/btn_create_account"
                style="@style/ButtonFlat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/create_account" />
        </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
